# framex

./: .gitignore  LICENSE  README.md  build.poetry.sh  macro.ps1  macro.sh  mkdocs.yml  pyproject.toml
.github/workflows/: publish.yml
assets/docs/lib/: about.md
docs/: .buildinfo  API.html  CLI.html  CNAME  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/.doctrees/: API.doctree  CLI.doctree  environment.pickle  index.doctree
docs/_sources/: API.rst.txt  CLI.rst.txt  index.rst.txt
docs/_static/: custom.css  custom.js  pygments.css
docs/_templates/autosummary/: table.html
documentation/: installation.md
documentation/Python/: about.md  available.md  get_url.md  load.md
frames/: __init__.py
frames/_dicts/: __init__.py  _all.py  _github.py  _local.py
frames/datasets/: __init__.py  _core.py
framex/: __init__.py
framex/_dicts/: __init__.py  _all.py  _constants.py  _github.py  _local.py  datasets.json
framex/cli/: _cli.py  _entry.py  _exceptions.py  tools.py
framex/data/: iris.parquet
framex/datasets/: __init__.py  _cli.py  _core.py  _get_url.py  _info.py  core.py  get_url.py  info.py
framex/utils/: __init__.py  _colors.py  _exceptions.py
sphinx/: API.rst  conf.py  requirements.txt
sphinx/_static/: custom.css  custom2.css
test/: all.py  clean.py  iris_head.py  test_available.py  test_load.py
tests/: __init__.py  about.py  all.py  cleaner.py  import.py  import_easy.py  iris_head.py  publish.py  test_available.py  test_cli.py  test_load.py  test_load_times.py  test_url.py  version.py
tests/data/: titanic.parquet
(+5 files in other folders)
