[project]
name = "framex"
version = "0.4.1"
description = "dataframe operations"
authors = [{ name = "Zaf4", email = "zafermolbio@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "polars>=1.9.0",
    "requests>=2.32.3",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.12.0",
    "ruff>=0.6.9",
]
